After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733422 - Regression: combo box initially blank
Regression: combo box initially blank
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
3.13.x
Other Linux
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2014-07-19 20:41 UTC by Sébastien Wilmet
Modified: 2014-07-20 10:21 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sébastien Wilmet 2014-07-19 20:41:40 UTC
There is a bug in gedit with a combo box initially blank. When clicking on the arrow the proposals are available and visible, and after selecting a proposal the text sometimes reappear in the combo box.

The problem comes from this commit:

commit 9c37b3de7466a22d4c784657a86c522e2a4f118a
Author: Jasper St. Pierre <jstpierre@mecheye.net>
Date:   Thu Jun 26 18:22:42 2014 -0400

    gtk: Don't use GObjectClass.constructor
    
    Use the newer constructed instead, which has a fast path in GObject.


Reverting it fixes the bug.

If you want to test, in gedit the combobox is in the open file dialog window, for choosing the encoding.
Comment 1 Sébastien Wilmet 2014-07-19 21:07:16 UTC
It can be fixed easily in gedit.

gedit has a subclass of GtkComboBox with a constructed(). The chain up to the parent constructed() is done at the end. It worked before because constructor() is called before constructed(). So the simple fix in gedit is to chain up at the beginning of the function, not at the end.

I don't think something can be done in gtk to avoid such regressions in other applications, apart from still using constructor(). So I think this bug can be closed as wontfix.