encodings-combo-box: chain up constructed() at the beginning

GtkComboBox's constructor() has been replaced recently by constructed().
Since constructor() is called before constructed(), it is needed to
chain up to the parent constructed() at the beginning of the function,
not at the end.

https://bugzilla.gnome.org/show_bug.cgi?id=733422